[package]
name = "securepkg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
tokio = { version = "1.46.1", features = ["full"] }
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-query = "0.32.6"
chrono = "0.4.41"
zip = "0.5.13"
walkdir = "2.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
rand = "0.9.1"
